// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency.sql > line 10 1`] = `
[
  "CREATE TABLE deptest (f1 serial primary key, f2 text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "deptest",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 32,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f2",
                  "is_local": true,
                  "location": 45,
                  "typeName": {
                    "location": 48,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 12 1`] = `
[
  "GRANT SELECT ON TABLE deptest TO GROUP regress_dep_group",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 39,
                  "rolename": "regress_dep_group",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 22,
                  "relname": "deptest",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "select",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 16 1`] = `
[
  "DROP USER regress_dep_user",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_dep_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 20 1`] = `
[
  "REVOKE SELECT ON deptest FROM GROUP regress_dep_group",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 36,
                  "rolename": "regress_dep_group",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "deptest",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "select",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 24 1`] = `
[
  "REVOKE SELECT, INSERT, UPDATE, DELETE, TRUNCATE, REFERENCES ON deptest FROM regress_dep_user",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 76,
                  "rolename": "regress_dep_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 63,
                  "relname": "deptest",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "select",
                },
              },
              {
                "AccessPriv": {
                  "priv_name": "insert",
                },
              },
              {
                "AccessPriv": {
                  "priv_name": "update",
                },
              },
              {
                "AccessPriv": {
                  "priv_name": "delete",
                },
              },
              {
                "AccessPriv": {
                  "priv_name": "truncate",
                },
              },
              {
                "AccessPriv": {
                  "priv_name": "references",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 28 1`] = `
[
  "REVOKE TRIGGER ON deptest FROM regress_dep_user",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 31,
                  "rolename": "regress_dep_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "deptest",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "trigger",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 32 1`] = `
[
  "REVOKE ALL ON deptest FROM regress_dep_user2",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 27,
                  "rolename": "regress_dep_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "deptest",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 44 1`] = `
[
  "DROP TABLE deptest",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "deptest",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 48 1`] = `
[
  "CREATE USER regress_dep_user0",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_dep_user0",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 53 1`] = `
[
  "DROP OWNED BY regress_dep_user1",
  {
    "stmts": [
      {
        "stmt": {
          "DropOwnedStmt": {
            "behavior": "DROP_RESTRICT",
            "roles": [
              {
                "RoleSpec": {
                  "location": 14,
                  "rolename": "regress_dep_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 58 1`] = `
[
  "DROP OWNED BY regress_dep_user0",
  {
    "stmts": [
      {
        "stmt": {
          "DropOwnedStmt": {
            "behavior": "DROP_RESTRICT",
            "roles": [
              {
                "RoleSpec": {
                  "location": 14,
                  "rolename": "regress_dep_user0",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 60 1`] = `
[
  "CREATE TABLE deptest1 (f1 int unique)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "deptest1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_UNIQUE",
                        "location": 30,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 63 1`] = `
[
  "SET SESSION AUTHORIZATION regress_dep_user1",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_dep_user1",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 83 1`] = `
[
  "  GRANT ALL ON TABLES TO regress_dep_user2",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 25,
                  "rolename": "regress_dep_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "tables",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 89 1`] = `
[
  "CREATE TABLE deptest2 (f1 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "deptest2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 91 1`] = `
[
  "CREATE SEQUENCE ss1",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSeqStmt": {
            "sequence": {
              "inh": true,
              "location": 16,
              "relname": "ss1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 97 1`] = `
[
  "CREATE TYPE deptest_t AS (a int)",
  {
    "stmts": [
      {
        "stmt": {
          "CompositeTypeStmt": {
            "coldeflist": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
            "typevar": {
              "location": 12,
              "relname": "deptest_t",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 101 1`] = `
[
  "RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 109 1`] = `
[
  "DROP USER regress_dep_user1",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_dep_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dependency.sql > line 113 1`] = `
[
  "DROP USER regress_dep_user2",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_dep_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
